--- a/HTMLCSSBootcamp/html/114-121-Blog-Post-Project.html
+++ b/HTMLCSSBootcamp/html/114-121-Blog-Post-Project.html
@@ -11,7 +11,7 @@
     />
     <link
       rel="stylesheet"
-      href="/HTMLCSSBootcamp/css/114-121-Blog-Post-Project.css"
+      href="/udemy/HTMLCSSBootcamp/css/114-121-Blog-Post-Project.css"
     />
     <title>Blog Post Project</title>
   </head>
@@ -23,8 +23,9 @@
       <p class="headline">
         Headlines, like this one, are great ways to quickly capture the reader's
         attention, to give them a sumary, intro, or other important information
-        in a web page. You can use text-transform: uppercase; to make a whole
-        body of text uppercase using CSS if you really need to grab attention!
+        in a web page. You can use <code>text-transform: capitalize;</code> to
+        make a whole body of text uppercase using CSS if you really need to grab
+        attention!
       </p>
       <p>
         Okay, now that we're done screaming in the headline in all caps (which
@@ -54,6 +55,103 @@
         <cite> – A wise person</cite>
       </blockquote>
       <hr />
+      <section>
+        <h3>a new section</h3>
+        <p>
+          And just like that, we've got a new section of content separated by a
+          hr element (a 'horizontal rule' or a divider) and a new heading. Isn't
+          putting content together fun?
+        </p>
+        <p>
+          Notice as well that when we entered in the H3 content, it was all
+          lowercase, but now it's in a nice Title Case, where the first letter
+          of each word is capitalized. We did that with CSS! Using
+          <code>text-transform: capitalize;</code> we can implement title cased
+          content.
+        </p>
+        <h4>Heading 4</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vitae
+          est dapibus, viverra metus ac, fermentum libero. Integer lobortis enim
+          ac arcu malesuada ultrices. Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit.
+        </p>
+        <h5>Heading 5</h5>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vitae
+          est dapibus, viverra metus ac, fermentum libero. Integer lobortis enim
+          ac arcu malesuada ultrices. Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit.
+        </p>
+        <h6>Heading 6</h6>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vitae
+          est dapibus, viverra metus ac, fermentum libero. Integer lobortis enim
+          ac arcu malesuada ultrices. Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit.
+        </p>
+      </section>
+      <section>
+        <h3>Common Font Sizing Approaches</h3>
+
+        <h4><code>px</code> (pixels)</h4>
+
+        <p>
+          Pixels are the simplest way to hard code your font size. By default
+          the browser sets the root font size to 16px, but you can change the
+          font size in the body element or any other HTML element by setting
+          font-size to any number of px.
+        </p>
+
+        <h4><code>em</code></h4>
+        <p>
+          em units size font relative to the parent element. For example, if the
+          body element is 16px, and a nested div element's font size is set to
+          1.5em, the browser will multiply 16px x 1.5, resulting in 24px font in
+          the div.
+        </p>
+        <h4><code>rem</code> (root em)</h4>
+        <p>
+          Root em units are similar to em, but they are relative to the root
+          font size instead of the parent element of whatever is being styled.
+          For example, if the root font size (the font size of the body element)
+          is set to 16px, and we have a p element nested many layers down with a
+          font-size set to 2rem, that paragraph will have 32px font. If the body
+          font size ever changes, this paragraph will also change accordingly.
+        </p>
+        <h4>Which one do I use?</h4>
+        <p>
+          Great question! Generally, people try to stick to using em or rem over
+          px, since they make responsive typography that scales up and down
+          across different device widths much easier. Using px for your font
+          sizes is not as dynamic, and you may find that writing media queries
+          to update all the various element font sizes in pixels at different
+          screen widths is not the most scalable approach to typography.
+        </p>
+        <p>
+          Between em and rem, rem has a nice advantage of all elements being
+          relative to one single root font value, where nested elements with
+          parent/child font size dependencies can still be hard to manage with
+          em units. When writing responsive styles, rem allows you to simply
+          update the root font size at different screen sizes and all elements
+          using rem units will adjust themselves accordingly creating a super
+          easy-to-manage typography size system.
+        </p>
+        <p>
+          In small projects you may not have an issues hard coding pixelage, but
+          it's always important to understand the drawbacks of writing styles
+          that may not be responsive or dynamic.
+        </p>
+      </section>
     </main>
+    <footer>
+      <ul>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Terms & Conditions</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">More Info</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
