--- a/HTMLCSSBootcamp/html/114-121-Blog-Post-Project.html
+++ b/HTMLCSSBootcamp/html/114-121-Blog-Post-Project.html
@@ -16,7 +16,16 @@
     <title>Blog Post Project</title>
   </head>
   <body>
-    <h1>A Blog Post</h1>
+    <header class="hero">
+      <h1>A Blog Post</h1>
+      <p>
+        Typography is one of the most important elements of front end design and
+        development! In this exercise, we'll play around with some of the common
+        css properties to manage and style our fonts by making a nice blog
+        post-like web page.
+      </p>
+      <hr />
+    </header>
     <main class="content">
       <p class="info">12.31.2050 | <span>all about css blog</span></p>
       <h2>All About Typography</h2>
