first hazel project

--- a/HTMLCSSBootcamp/html/129-136-Hazel-CV-Project.html
+++ b/HTMLCSSBootcamp/html/129-136-Hazel-CV-Project.html
@@ -10,6 +10,21 @@
     <title>Hazel CV Project</title>
   </head>
   <body>
-    <h1>Test</h1>
+    <header class="hero">
+      <nav class="navbar">
+        <div class="navbar-menu">
+          <h2>Blog</h2>
+          <h2>Speaking Events</h2>
+        </div>
+        <div>
+          <h2>Hazel</h2>
+        </div>
+        <div>
+          <button>Contact Me</button>
+        </div>
+      </nav>
+    </header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
