2nd phase of hazel project

--- a/HTMLCSSBootcamp/html/129-136-Hazel-CV-Project.html
+++ b/HTMLCSSBootcamp/html/129-136-Hazel-CV-Project.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Cormorant:ital,wght@0,300..700;1,300..700&family=Forum&family=Lilita+One&family=Mukta+Malar:wght@200;300;400;500;600;700;800&family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="/udemy/HTMLCSSBootcamp/css/129-136-Hazel-CV-Project.css"
@@ -13,14 +19,14 @@
     <header class="hero">
       <nav class="navbar">
         <div class="navbar-menu">
-          <h2>Blog</h2>
-          <h2>Speaking Events</h2>
+          <a href="#">Blog</a>
+          <a href="#">Speaking Events</a>
         </div>
-        <div>
+        <div class="navbar-title">
           <h2>Hazel</h2>
         </div>
-        <div>
-          <button>Contact Me</button>
+        <div class="navbar-cta">
+          <a class="contact" href="#">Contact Us</a>
         </div>
       </nav>
     </header>
