--- a/ModernJSBootcamp/index.html
+++ b/ModernJSBootcamp/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <!-- <script src="/udemy/ModernJSBootcamp/04-ControllingProgramLogicAndFlow.js"></script> -->
-    <script src="/udemy/ModernJSBootcamp/05-Arrays.js"></script>
+    <!-- <script src="/udemy/ModernJSBootcamp/05-Arrays.js"></script> -->
+    <script src="/udemy/ModernJSBootcamp/06-Objects.js"></script>
   </body>
 </html>
