finishing section 7 - objects

--- a/ModernJSBootcamp/index.html
+++ b/ModernJSBootcamp/index.html
@@ -8,6 +8,7 @@
   <body>
     <!-- <script src="/udemy/ModernJSBootcamp/04-ControllingProgramLogicAndFlow.js"></script> -->
     <!-- <script src="/udemy/ModernJSBootcamp/05-Arrays.js"></script> -->
-    <script src="/udemy/ModernJSBootcamp/06-Objects.js"></script>
+    <!-- <script src="/udemy/ModernJSBootcamp/06-Objects.js"></script> -->
+    <script src="/udemy/ModernJSBootcamp/07-Looping.js"></script>
   </body>
 </html>
