start of chapter 8 - functions

--- a/ModernJSBootcamp/index.html
+++ b/ModernJSBootcamp/index.html
@@ -9,6 +9,7 @@
     <!-- <script src="/udemy/ModernJSBootcamp/04-ControllingProgramLogicAndFlow.js"></script> -->
     <!-- <script src="/udemy/ModernJSBootcamp/05-Arrays.js"></script> -->
     <!-- <script src="/udemy/ModernJSBootcamp/06-Objects.js"></script> -->
-    <script src="/udemy/ModernJSBootcamp/07-Looping.js"></script>
+    <!-- <script src="/udemy/ModernJSBootcamp/07-Looping.js"></script> -->
+    <script src="/udemy/ModernJSBootcamp/08-Functions.js"></script>
   </body>
 </html>
