Menyelesaikan Assignment Day 7 dan 8 Dibimbing

--- a/ModernJSBootcamp/index.html
+++ b/ModernJSBootcamp/index.html
@@ -10,6 +10,8 @@
     <!-- <script src="/udemy/ModernJSBootcamp/05-Arrays.js"></script> -->
     <!-- <script src="/udemy/ModernJSBootcamp/06-Objects.js"></script> -->
     <!-- <script src="/udemy/ModernJSBootcamp/07-Looping.js"></script> -->
-    <script src="/udemy/ModernJSBootcamp/08-Functions.js"></script>
+    <button>click me</button>
+    <!-- <script src="/udemy/ModernJSBootcamp/08-Functions.js"></script> -->
+    <script src="/udemy/ModernJSBootcamp/09-AdvancedFunctions.js"></script>
   </body>
 </html>
