--- a/HTMLCSSBootcamp/html/129-136-Hazel-CV-Project.html
+++ b/HTMLCSSBootcamp/html/129-136-Hazel-CV-Project.html
@@ -29,8 +29,65 @@
           <a class="contact" href="#">Contact Us</a>
         </div>
       </nav>
+      <div class="hero-content">
+        <h1 class="tagline">
+          I'm a <em>Scientist</em> and <em>Speaker</em> who is interested in the
+          psychology of greed
+        </h1>
+        <div class="two-columns-section">
+          <p class="percent-50">My Mission</p>
+          <p class="percent-50">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor ex
+            eius expedita obcaecati? Natus consectetur maiores ex ducimus velit
+            aspernatur numquam qui animi officiis, dolore provident cumque est
+            pariatur quisquam nostrum.
+          </p>
+        </div>
+        <div class="two-columns-section">
+          <p>Specialties</p>
+
+          <ul class="skills">
+            <li>List 1</li>
+            <li>List 1</li>
+            <li>List 1</li>
+            <li>List 1</li>
+            <li>List 1</li>
+          </ul>
+        </div>
+      </div>
     </header>
-    <main></main>
+    <main>
+      <section class="blog-section">
+        <div class="blog-content">
+          <div class="two-columns-section">
+            <p>Tech Blog</p>
+            <div class="blog-post">
+              <p class="blog-title">This your Brain on Helium</p>
+              <p class="blog-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
+                ipsum, repudiandae alias ut tenetur delectus facere incidunt
+                dolorem eveniet saepe minus illum iusto non magnam!
+              </p>
+              <p class="blog-date">May 19, 2025</p>
+              <p class="blog-title">This your Brain on Helium</p>
+              <p class="blog-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
+                ipsum, repudiandae alias ut tenetur delectus facere incidunt
+                dolorem eveniet saepe minus illum iusto non magnam!
+              </p>
+              <p class="blog-date">May 19, 2025</p>
+              <p class="blog-title">This your Brain on Helium</p>
+              <p class="blog-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
+                ipsum, repudiandae alias ut tenetur delectus facere incidunt
+                dolorem eveniet saepe minus illum iusto non magnam!
+              </p>
+              <p class="blog-date">May 19, 2025</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
