--- a/HTMLCSSBootcamp/html/129-136-Hazel-CV-Project.html
+++ b/HTMLCSSBootcamp/html/129-136-Hazel-CV-Project.html
@@ -87,7 +87,37 @@
           </div>
         </div>
       </section>
+      <section class="events-section">
+        <div class="events-content">
+          <div class="two-columns-section">
+            <p>Speaking Events</p>
+            <div class="events-card">
+              <p class="events-title">NY Economics Forum</p>
+              <p class="events-location">New York, NY</p>
+              <p class="events-date">May 19,2025</p>
+              <p class="events-title">NY Economics Forum</p>
+              <p class="events-location">New York, NY</p>
+              <p class="events-date">May 19,2025</p>
+              <p class="events-title">NY Economics Forum</p>
+              <p class="events-location">New York, NY</p>
+              <p class="events-date">May 19,2025</p>
+              <p class="events-title">NY Economics Forum</p>
+              <p class="events-location">New York, NY</p>
+              <p class="events-date">May 19,2025</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-content">
+        <img
+          src="/udemy/HTMLCSSBootcamp/assets/instagram.png"
+          alt="instagram"
+        />
+        <img src="/udemy/HTMLCSSBootcamp/assets/twitter.png" alt="twitter" />
+        <p>Made With 😘</p>
+      </div>
+    </footer>
   </body>
 </html>
