--- a/Dibimbing/TailwindCSS/HandsOnTailwind1/src/index.html
+++ b/Dibimbing/TailwindCSS/HandsOnTailwind1/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="smooth-scroll">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,11 +15,17 @@
           <div class="text-white text-2xl font-semibold">MEVVAH</div>
           <!-- untuk link menu -->
           <div class="hidden md:flex space-x-6">
-            <a href="#" class="text-white hover:text-red-300">Home</a>
-            <a href="#" class="text-white hover:text-red-300">About Us</a>
-            <a href="#" class="text-white hover:text-red-300">Special Menu</a>
-            <a href="#" class="text-white hover:text-red-300">Events</a>
-            <a href="#" class="text-white hover:text-red-300">Reservation</a>
+            <a href="#hero-section" class="text-white hover:text-red-300"
+              >Home</a
+            >
+            <a href="#about" class="text-white hover:text-red-300">About Us</a>
+            <a href="#special-menu" class="text-white hover:text-red-300"
+              >Special Menu</a
+            >
+            <a href="#events" class="text-white hover:text-red-300">Events</a>
+            <a href="#reservation" class="text-white hover:text-red-300"
+              >Reservation</a
+            >
           </div>
           <!-- untuk hamburger button -->
           <div class="md:hidden flex items-center">
@@ -55,6 +61,7 @@
     </header>
     <main>
       <section
+        id="hero-section"
         class="h-200 relative bg-cover bg-center bg-no-repeat"
         style="background-image: url('./restoran2.jpeg')"
       >
@@ -71,12 +78,12 @@
           </p>
           <div class="flex flex-col gap-3 md:flex-row">
             <a
-              href="#"
+              href="#special-menu"
               class="bg-red-600 hover:bg-red-700 text-white py-3 px-6 rounded-full transition duration-300"
               >Special Menu</a
             >
             <a
-              href="#"
+              href="#reservation"
               class="bg-transparent border border-white hover:bg-white hover:text-black text-white py-3 px-6 rounded-full transition duration-300"
               >Reservation</a
             >
@@ -104,7 +111,7 @@
               dining experience.
             </p>
             <a
-              href="#"
+              href="#special-menu"
               class="bg-red-600 hover:bg-red-700 text-white py-3 px-6 rounded-full transition duration-300"
               >Special Menu</a
             >
@@ -164,9 +171,10 @@
                 alt="Dish 2"
                 class="rounded-xl mb-4 w-full object-cover aspect-video"
               />
-              <h3 class="text-xl font-semibold mb-2">Lobster Bisque</h3>
+              <h3 class="text-xl font-semibold mb-2">Salmon Teriyaki</h3>
               <p class="text-gray-500">
-                Rich and creamy soup with fresh lobster and herbs.
+                A perfectly grilled, succulent salmon fillet glazed with a rich,
+                velvety teriyaki sauce.
               </p>
             </div>
 
@@ -179,9 +187,10 @@
                 alt="Dish 3"
                 class="rounded-xl mb-4 w-full object-cover aspect-video"
               />
-              <h3 class="text-xl font-semibold mb-2">Saffron Risotto</h3>
+              <h3 class="text-xl font-semibold mb-2">Carbonara Pasta</h3>
               <p class="text-gray-500">
-                Creamy risotto with saffron and parmesan cheese.
+                Al dente pasta coated in a creamy, velvety sauce made from aged
+                parmesan, fresh egg yolk, and infused with aromatic.
               </p>
             </div>
 
@@ -194,9 +203,12 @@
                 alt="Dish 4"
                 class="rounded-xl mb-4 w-full object-cover aspect-video"
               />
-              <h3 class="text-xl font-semibold mb-2">Caviar Delight</h3>
+              <h3 class="text-xl font-semibold mb-2">Chocolate Lava Cake</h3>
               <p class="text-gray-500">
-                Exquisite caviar served with fine blinis and creme fraiche.
+                Served warm and accompanied by velvety vanilla bean ice cream
+                and fresh berries, this indulgent masterpiece offers a blissful
+                harmony of textures and flavors designed to captivate your
+                senses.
               </p>
             </div>
           </div>
@@ -215,7 +227,7 @@
               <!-- Event 1 -->
               <div class="carousel-item">
                 <img
-                  src="./steak-1.jpg"
+                  src="./grand1.jpg"
                   alt="Event 1"
                   class="rounded-lg mb-4 w-full h-80 object-cover"
                 />
@@ -229,7 +241,7 @@
               <!-- Event 2 -->
               <div class="carousel-item">
                 <img
-                  src="./steak-2.jpg"
+                  src="./wine1.jpg"
                   alt="Event 2"
                   class="rounded-lg mb-4 w-full h-80 object-cover"
                 />
@@ -243,7 +255,7 @@
               <!-- Event 3 -->
               <div class="carousel-item">
                 <img
-                  src="./steak-3.jpg"
+                  src="./buffet5.jpg"
                   alt="Event 3"
                   class="rounded-lg mb-4 w-full h-80 object-cover"
                 />
@@ -434,7 +446,9 @@
               <h4 class="font-semibold text-white mb-2">Menu</h4>
               <ul class="space-y-2 text-gray-400">
                 <li>
-                  <a href="#home" class="hover:text-red-300 transition">Home</a>
+                  <a href="#hero-section" class="hover:text-red-300 transition"
+                    >Home</a
+                  >
                 </li>
                 <li>
                   <a href="#about" class="hover:text-red-300 transition"
@@ -442,7 +456,7 @@
                   >
                 </li>
                 <li>
-                  <a href="#menu" class="hover:text-red-300 transition"
+                  <a href="#special-menu" class="hover:text-red-300 transition"
                     >Special Menu</a
                   >
                 </li>
@@ -452,7 +466,7 @@
                   >
                 </li>
                 <li>
-                  <a href="#events" class="hover:text-red-300 transition"
+                  <a href="#reservation" class="hover:text-red-300 transition"
                     >Reservation</a
                   >
                 </li>
