--- a/Dibimbing/Day8/Assignment/test4.html
+++ b/Dibimbing/Day8/Assignment/test4.html
@@ -9,9 +9,10 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <!-- <link rel="stylesheet" href="styles.css" /> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
   </head>
-  <body class="bg-gray-50">
+  <body>
     <!-- Navbar -->
     <nav class="bg-blue-800 p-4">
       <div class="container mx-auto flex justify-between items-center">
